Fixed overflow sizing problem

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -2,7 +2,8 @@ $alpha: 1;
 
 $gray-print: rgba(38, 38, 38, $alpha);
 $gray-digital: rgba(77, 77, 79, $alpha);
-$dark-grey: #4d4d4f;
+$gray-highlight: rgba(200, 200, 200, 0.4);
+$gray-select: rgba(160, 160, 160, 0.4);
 $blue-pms: rgba(0, 196, 220, $alpha);
 $blue-digital: rgba(0, 187, 210, $alpha);
 $blue-4: rgba(66, 255, 212, $alpha);
