--- a/app/assets/stylesheets/components/_dropdown_menu.scss
+++ b/app/assets/stylesheets/components/_dropdown_menu.scss
@@ -19,7 +19,7 @@
       padding: 5px;
       border-radius: 4px 4px 0 0;
 
-      background-color: $dark-grey;
+      background-color: $gray-digital;
       color: #e1e1e1;
     }
 
@@ -32,7 +32,7 @@
       border-radius: 0 0 4px 4px;
 
       background-color: #e1e1e1;
-      color: $dark-grey;
+      color: $gray-digital;
 
       overflow: scroll;
 
