--- a/app/assets/stylesheets/modules/admin/view_cohorts_page/cohort_data.scss
+++ b/app/assets/stylesheets/modules/admin/view_cohorts_page/cohort_data.scss
@@ -12,23 +12,32 @@
     border: 1px solid $blue-digital;
     border-radius: 4px;
 
+    @include shadow();
+
     .cohort-data {
       display: flex;
       flex-wrap: wrap;
 
-      height: 30%;
+      min-height: 100px;;
       width: 100%;
 
       padding: 10px;
+
+      overflow: scroll;
     }
 
     .cohort-applications {
       display: flex;
+      flex-direction: column;
 
-      height: 100%;
+      min-height: auto;
       width: 100%;
 
       padding: 10px;
+
+      border-top: 1px solid $blue-digital;
+
+      overflow: scroll;
     }
   }
 }
