--- a/app/assets/stylesheets/modules/admin/view_cohorts_page/view_applications.scss
+++ b/app/assets/stylesheets/modules/admin/view_cohorts_page/view_applications.scss
@@ -8,5 +8,7 @@
     height: 100%;
 
     padding: 5px;
+
+    @include shadow();
   }
 }
